# bigdn

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
include/: benchmark.hpp  filters.hpp  gui.hpp  image.hpp  metrics.hpp
src/: benchmark.cpp  gui.cpp  image.cpp  main.cpp  metrics.cpp
src/filters/: ATrousWavelet_CUDA.cu  gaussian_CUDA.cu  gaussian_OMP.cpp  gaussian_ST.cpp  guided_CUDA.cu  guided_OMP.cpp  guided_ST.cpp  joint_guided_CUDA.cu  masked_median_atrous_CUDA.cu  mean.cpp  mean_CUDA.cu  mean_OMP.cpp  mean_ST.cpp
